[package]
name = "arachne"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
bollard = "0.17.1"        # NOTE: watch out for conflicts with testcontainers for bollard-stub
git2 = "0.20.0"
testcontainers = "0.23.1" # NOTE: watch out for conflicts with testcontainers for bollard-stub
