[package]
name = "arachne"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.94"
itertools = "0.14.0"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
git2 = "0.20.0"
lazy_static = "1.5.0"
testcontainers = "0.23.1" # NOTE: watch out for conflicts with testcontainers for bollard-stub
tracing-test = "0.2.5"
url = "2.5.4"
